src/objects/CleanQuoteUser__c.object
<CustomObject>
    <description>The user information for CleanQuote</description>
    <fields>
        <fullName>Business_Focus__c</fullName>
        <label>Business Focus</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Business Development / Sales</fullName>
                </value>
                <value>
                    <fullName>Engineering</fullName>
                </value>
                <value>
                    <fullName>Finance</fullName>
                </value>
                <value>
                    <fullName>Project Management</fullName>
                </value>
                <value>
                    <fullName>Executive Management</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>City__c</fullName>
        <label>City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Company_Name__c</fullName>
        <label>Company Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <inlineHelpText>Email</inlineHelpText>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>First_Name__c</fullName>
        <inlineHelpText>The First Name of the User Register</inlineHelpText>
        <label>First Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Geography_Focus__c</fullName>
        <label>Geography Focus</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>How_can_CleanFund_Help_You__c</fullName>
        <label>How can CleanFund Help  You</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>How_did_you_hear_about_us__c</fullName>
        <label>How did I find CleanQuote</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>CleanFund Team Member</fullName>
                </value>
                <value>
                    <fullName>News Article</fullName>
                </value>
                <value>
                    <fullName>Internet Search</fullName>
                </value>
                <value>
                    <fullName>CleanFund Email Marketing</fullName>
                </value>
                <value>
                    <fullName>PACE Nation</fullName>
                </value>
                <value>
                    <fullName>Colleague or Industry Professional</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Partner Network Team Member</fullName>
                </value>
                <value>
                    <fullName>Partner Network Email Marketing</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Is_Property_Owner__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>This indicates if this contact is a property owner.</inlineHelpText>
        <label>Is Property Owner</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Last_Name__c</fullName>
        <inlineHelpText>The Last Name of the User Registered</inlineHelpText>
        <label>Last Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PACE_Experience__c</fullName>
        <label>PACE Experience</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Have proposed PACE on projects, but haven’t closed any with PACE.</fullName>
                </value>
                <value>
                    <fullName>Have closed commercial projects with PACE and have a positive overall impression.</fullName>
                </value>
                <value>
                    <fullName>Have closed commercial projects with PACE and have a negative overall impression.</fullName>
                </value>
                <value>
                    <fullName>Have not proposed PACE on any projects.</fullName>
                </value>
                <value>
                    <fullName>Have closed residential projects with PACE, but not commercial.</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Percentage_Commercial__c</fullName>
        <label>Percentage Commercial</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>0-25%</fullName>
                </value>
                <value>
                    <fullName>26-50%</fullName>
                </value>
                <value>
                    <fullName>51-75%</fullName>
                </value>
                <value>
                    <fullName>76-100%</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Phone__c</fullName>
        <inlineHelpText>The Phone Number of the User Registered.</inlineHelpText>
        <label>Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Role__c</fullName>
        <label>Role</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Contractor</fullName>
                </value>
                <value>
                    <fullName>Real Estate Advisor</fullName>
                </value>
                <value>
                    <fullName>Mortgage Broker</fullName>
                </value>
                <value>
                    <fullName>Energy Services Consultant</fullName>
                </value>
                <value>
                    <fullName>Solar Professional</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Street_Address__c</fullName>
        <label>Street Address</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Title__c</fullName>
        <label>Title</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Used_PACE_before__c</fullName>
        <label>Used PACE before</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Yes_No_Only</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Zip__c</fullName>
        <label>Zip</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>state__c</fullName>
        <label>State</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>States</valueSetName>
        </valueSet>
    </fields>
    <label>CleanQuoteUser</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Users</fullName>
        <columns>NAME</columns>
        <columns>First_Name__c</columns>
        <columns>Last_Name__c</columns>
        <columns>Used_PACE_before__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>Users</label>
    </listViews>
    <nameField>
        <label>CleanQuoteUser Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>CleanQuoteUsers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>